[package]
name = "pegz-bot"
version = "0.1.0"
authors = ["Ed Henriques IV (ediv) <ehenriquesiv@gmail.com>"]
edition = "2018"

[dependencies]
egg-mode = "0.16"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
time = "0.3.0"
dotenv = "0.15.0"
chrono = "0.4.19"
bytes = "1.0.1"
rand = "0.8.4"